--- a/style.css
+++ b/style.css
@@ -35,13 +35,15 @@ body {
 }
 
 .card-title {
-  margin: 2em 0 2em 0;
+  margin: 0 0 1em 0;
+  font-weight: 600;
 }
 
 .card-price {
   font-size: 3em;
   font-weight: 600;
   display: inline-block;
+  margin: 0px;
 }
 
 .card-info {
@@ -56,7 +58,10 @@ body {
 
 
 #currency {
-  font-size: 25px;
+  font-size: 35px;
+  position: absolute;
+  color: inherit;
+  margin: 13px -27px;
 }
 
 .currecy {
